more style changes

--- a/teme/tema1.html
+++ b/teme/tema1.html
@@ -17,22 +17,22 @@
 <hr>
 <h1>Tema A</h1>
 <ul>
-    <li>Creați o aplicație de tip consolă care citește de la tastatură două stringuri <em>nume1</em> și <em>nume2</em>.</li> 
+    <li>Creați o aplicație de tip consolă care citește de la tastatură două stringuri <em>nume1</em> și <em>nume2</em>.</li>
     <li>Ulterior programul afișează în consolă <em>nume1</em> + <em>nume2</em> = ♥.</li>
     <li>Exemplu:    <em>Andrei + Ana = ♥</em></li>
     <li>Puteți folosi ca inspirație codul dat la prima lecție în care se citea un nume și se afișa numele respectiv împreună cu un salut:</li>
     <li>Inimioara este codată în ASCII cu valoarea 3.</li>
-    <li>Următorul exemplu vă arată cum se afișează în consolă o inimioară:</li>     
+    <li>Următorul exemplu vă arată cum se afișează în consolă o inimioară:</li>
 </ul>
     <pre>
         <code class="cpp">
-            cout << (char) 3 << endl;
+    cout << (char) 3 << endl;
         </code>
-    </pre>    
+    </pre>
 
 <ul>
     <li>Rețineți că operatorul <strong><< endl;</strong> introduce o linie nouă în consolă.</li>
-    <li>Este important să folosim <strong>endl</strong> doar atunci când este nevoie.</li>       
+    <li>Este important să folosim <strong>endl</strong> doar atunci când este nevoie.</li>
 </ul>
 
 <h1>Tema B</h2>
@@ -40,7 +40,7 @@
 
 
 <ul>
-    <li>Accesați site-ul <a href="https://www.asciiart.eu/"> ASCII Art</a> și alegeți de acolo 3 modele pe care să le afișati în consolă.</li> 
+    <li>Accesați site-ul <a href="https://www.asciiart.eu/"> ASCII Art</a> și alegeți de acolo 3 modele pe care să le afișati în consolă.</li>
     <li>Folosiți funcția prin care compilatorul vă anunță acolo unde s-au identificat erori în cod.</li>
     <li>Anunțați compilatorul despre <strong>caracterele speciale</strong> folosind caracterul \ înaintea acestora.</li>
     <li>Aveți în vedere că nu toate caracterele speciale generează erori de sintaxă. Puteți identifica erorile de afișare în momentul în care modelul dorit nu este afișat corect.</li>
@@ -78,14 +78,14 @@
 </ul>
 
 <pre>
-    <code class="cpp">
-        cout << "    /\\_____/\\" << endl;
-        cout << "   /  o   o  \\" << endl;
-        cout << "  ( ==  ^  == )" << endl;
-        cout << "   )         (" << endl;
-        cout << "  (           )" << endl;
-        cout << " ( (  )   (  ) )" << endl;
-        cout << "(__(__)___(__)__)" << endl;
+    <code class="c++">
+    cout << "    /\\_____/\\" << endl;
+    cout << "   /  o   o  \\" << endl;
+    cout << "  ( ==  ^  == )" << endl;
+    cout << "   )         (" << endl;
+    cout << "  (           )" << endl;
+    cout << " ( (  )   (  ) )" << endl;
+    cout << "(__(__)___(__)__)" << endl;
     </code>
 </pre>
 <hr>
