--- a/compiler.html
+++ b/compiler.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <title>CPP Tema 2</title>
 <link rel="icon" href="icon.ico">
+<link rel="stylesheet" href="style.css">
 <style>
 body {
   font-family: 'Courier New', monospace;
