--- a/teme/tema4.html
+++ b/teme/tema4.html
@@ -14,7 +14,7 @@
 
 <body>
 <a href="../index.html">&lt&lt Home</a>
-<p>Înainte de a face tema, consultați <a href="t4img/m2l1.pdf">lecția</a> pentru inspirație.</p>
+<p>Înainte de a face tema, consultați <a href="../lectii/l4.html">lecția</a> pentru inspirație.</p>
 <hr>
 <h1>Tema A</h1>
 <ul>
