--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <hr>
     <h2>Lecții</h2>
     <ul>
-        <li><a href="lectii/l1.html">Lecția1</a></li>
-        <li><a href="lectii/l2.html">Lecția2</a></li>
-        <li><a href="lectii/l3.html">Lecția3</a></li>
-        <li><a href="lectii/l4.html">Lecția4</a></li>
+    <h4>Modul I</h4>
+        <li><a href="lectii/l1.html">Lecția1</a> - Introducere în limbajul C++. Input vs Output</li>
+        <li><a href="lectii/l2.html">Lecția2</a> - Tipuri de date și variabile. Structura de decizie</li>
+        <li><a href="lectii/l3.html">Lecția3</a> -  Mai multe despre structura de decizie</li>
+    <h4>Modul II</h4>
+        <li><a href="lectii/l4.html">Lecția4</a> - Structura while</li>
+        <li><a href="lectii/l5.html">Lecția5</a> - Structura while (aprofundare)</li>
         
     </ul>
     <hr>
@@ -29,6 +32,7 @@
         <li><a href="teme/tema2.html">Tema2</a></li>
         <li><a href="teme/tema3.html">Tema3</a></li>
         <li><a href="teme/tema4.html">Tema4</a></li>
+        <li><a href="teme/tema5.html">Tema5</a></li>
     </ul>
     <hr>
     <ul>
