--- a/lectii/l1.html
+++ b/lectii/l1.html
@@ -164,7 +164,9 @@
         <li>În consolă, acel caracter \ pus în plus nu mai apare.</li>
         </ul>                                                                                                         
     </ol>
-    
+    <hr>
+    <a href="../teme/tema1.html">Tema</a>
+    <a href="./l2.html">Lecția2</a>
 </body>
 
 </html>
