--- a/lectii/l2.html
+++ b/lectii/l2.html
@@ -440,8 +440,9 @@
     </ul>
     </ol>
     
-
-
+    <hr>
+    <a href="../teme/tema2.html">Tema</a>
+    <a href="./l3.html">Lecția3</a>
 
 </body>
 
