--- a/lectii/l3.html
+++ b/lectii/l3.html
@@ -402,7 +402,9 @@ becul_este_aprins = !becul_este_aprins;
     
     </ol>
 
-
+    <hr>
+    <a href="../teme/tema3.html">Tema</a>
+    <a href="./l4.html">Lecția4</a>
 </body>
 
 </html>
