--- a/lectii/l4.html
+++ b/lectii/l4.html
@@ -492,6 +492,10 @@ n = n / 10;
         </pre>
         </ol>
     </ol>
+    
+    <hr>
+    <a href="../teme/tema4.html">Tema</a>
+    <a href="./l5.html">Lecția5</a>
 </body>
 
 </html>
