--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <h4>Modul II</h4>
         <li><a href="lectii/l4.html">Lecția4</a> - Structura while</li>
         <li><a href="lectii/l5.html">Lecția5</a> - Structura while (aprofundare)</li>
+        <li><a href="lectii/l6.html">Lecția6</a> - Structura while (aplicații)</li>
         
     </ul>
     <hr>
@@ -47,6 +48,7 @@
         <li><a href="teme/tema3.html">Tema3</a></li>
         <li><a href="teme/tema4.html">Tema4</a></li>
         <li><a href="teme/tema5.html">Tema5</a></li>
+        <li><a href="teme/tema6.html">Tema6</a></li>
     </ul>
     <hr>
     <ul>
