Signed-off-by: anicca <meresan02david1006@gmail.com>

--- a/teme/tema6.html
+++ b/teme/tema6.html
@@ -40,7 +40,7 @@
 <h1>Tema C</h1>
 <ul>
     <li>Scrieți un <em>virus</em> care închide calculatorul după 44 de secunde</li>
-    <li>Pentru a opri execuția programului pentru o secundă, se poate folosi instrucțiunea sleep(1);</li>
+    <li>Pentru a opri execuția programului pentru o secundă, se poate folosi instrucțiunea Sleep(1000);</li>
     
     <pre>
         <code class="c++">
@@ -49,7 +49,7 @@
 
         int main(){
             //while ...
-                sleep(1);  //stă o secundă apoi merge mai departe
+                Sleep(1000);  //stă o secundă apoi merge mai departe
             
             return 0;
         }
